--- a/style.css
+++ b/style.css
@@ -35,12 +35,19 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: 3s;
 }
+
+.ex-4-square:hover{
+    opacity: 0;
+}
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
     height: 60px;
     background: red;
+    
 }
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
