--- a/style.css
+++ b/style.css
@@ -47,10 +47,23 @@
     width: 60px;
     height: 60px;
     background: red;
-    
+    transition: 3s;
 }
+
+.ex-5-square:hover{
+    transform: scale(2);
+}
+
+.ex-5-square:active{
+    transform: scale(.5);
+}
+
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
+}
+
+.ex-6-img:hover{
+    filter: grayscale(100%);
 }
 
 .ex-9-img {
