--- a/style.css
+++ b/style.css
@@ -62,6 +62,14 @@
     width: 500px;
 }
 
+.ex-7-img{
+    transition: 3s;
+}
+
+.ex-7-img:hover{
+    filter: blur(5px) grayscale(100%);
+}
+
 .ex-6-img:hover{
     filter: grayscale(100%);
 }
