--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@
     width: 500px;
 }
 
+
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
+
 .ex-7-img{
     transition: 3s;
 }
@@ -70,8 +75,14 @@
     filter: blur(5px) grayscale(100%);
 }
 
-.ex-6-img:hover{
-    filter: grayscale(100%);
+.ex-8-img{
+    transition: 3s;
+}
+
+.ex-8-img:hover
+{
+    filter: blur(5px) grayscale(100%) ;
+    border-radius: 10%;
 }
 
 .ex-9-img {
